# userandreviews

./: .gitignore  app.py  pyproject.toml
auth/: routes.py
models/: models.py
pages/: __init__.py  reviews.py
static/css/: style.css
templates/: about.html  dashboard.html  forbidden.html  home.html  login.html  register.html  reviews.html  unauthorized.html  users.html
